--- a/CarPoolPrototype5/CarPoolPrototype5-Info.plist
+++ b/CarPoolPrototype5/CarPoolPrototype5-Info.plist
@@ -26,6 +26,19 @@
 	<true/>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>FacebookAppID</key>
+	<string>607034419390890</string>
+	<key>FacebookDisplayName</key>
+	<string>Test App Car Pool</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb607034419390890</string>
+			</array>
+		</dict>
+	</array>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
